--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,41 @@
-scenic==2.1.0
+about-time==4.2.1
+alive-progress==3.1.5
+antlr4-python3-runtime==4.13.1
+Arpeggio==2.0.2
+attrs==23.2.0
+autograd==1.6.2
+blinker==1.8.2
+click==8.1.7
+cma==3.2.2
+contourpy==1.2.1
+cycler==0.12.1
+decorator==5.1.1
+Deprecated==1.2.14
+dill==0.3.8
+dotmap==1.3.30
+Flask==3.0.3
+fonttools==4.51.0
+future==1.0.0
+grapheme==0.6.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+kiwisolver==1.4.5
+mapbox-earcut==1.0.1
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+numpy==1.26.4
+opencv-python==4.9.0.80
+packaging==24.0
+Pillow==9.5.0
+pygame==2.5.2
 pymoo==0.6.1.1
-textx[cli]==3.1.1
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+scenic==2.1.0
+scipy==1.13.0
+Shapely==1.8.5.post1
+six==1.16.0
+textX==3.1.1
+Werkzeug==3.0.3
+wrapt==1.16.0
+z3-solver==4.13.0.0
