Add Ace editor with simple highlighting rules

--- a/frontend/concretize-frontend/package.json
+++ b/frontend/concretize-frontend/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-ace-editor": "^2.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
