--- a/requirements.txt
+++ b/requirements.txt
@@ -4,26 +4,27 @@ antlr4-python3-runtime==4.13.1
 Arpeggio==2.0.2
 attrs==23.2.0
 autograd==1.6.2
-blinker==1.8.2
+blinker==1.6.3
 click==8.1.7
 cma==3.2.2
-contourpy==1.2.1
-cycler==0.12.1
+contourpy==1.0.6
+cycler==0.11.0
 decorator==5.1.1
 Deprecated==1.2.14
-dill==0.3.8
+dill==0.3.7
 dotmap==1.3.30
-Flask==3.0.3
-fonttools==4.51.0
+Flask==2.2.5
+flask_cors==4.0.1
+fonttools==4.38.0
 future==1.0.0
 grapheme==0.6.0
-itsdangerous==2.2.0
+itsdangerous==2.1.2
 Jinja2==3.1.4
 kiwisolver==1.4.5
 mapbox-earcut==1.0.1
 MarkupSafe==2.1.5
-matplotlib==3.8.4
-numpy==1.26.4
+matplotlib==3.5.3
+numpy==1.21.6
 opencv-python==4.9.0.80
 packaging==24.0
 Pillow==9.5.0
@@ -32,10 +33,10 @@ pymoo==0.6.1.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 scenic==2.1.0
-scipy==1.13.0
+scipy==1.7.3
 Shapely==1.8.5.post1
 six==1.16.0
 textX==3.1.1
-Werkzeug==3.0.3
+Werkzeug==2.2.3
 wrapt==1.16.0
 z3-solver==4.13.0.0
