--- a/Dockerfile-frontend
+++ b/Dockerfile-frontend
@@ -1,5 +1,6 @@
-FROM node:21.0.0
+FROM node:22.3.0
 WORKDIR /app
-COPY frontend/concretize-frontend .
+COPY frontend/concretize-frontend/package*.json .
 RUN npm install
+COPY frontend/concretize-frontend .
 CMD [ "npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "5173" ]
