--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ networkx==2.6.3
 numpy==1.21.6
 opencv-python==4.9.0.80
 packaging==24.0
+pandas==1.3.5
 Pillow==9.5.0
 pygame==2.5.2
 pymoo==0.6.1.1
