--- a/Dockerfile-frontend
+++ b/Dockerfile-frontend
@@ -3,4 +3,8 @@ WORKDIR /app
 COPY frontend/concretize-frontend/package*.json .
 RUN npm install
 COPY frontend/concretize-frontend .
-CMD [ "npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "5173" ]
+ARG BACKEND_PORT=5001
+ARG FRONTEND_PORT=5173
+ENV VITE_BACKEND_PORT=$BACKEND_PORT
+ENV VITE_FRONTEND_PORT=$FRONTEND_PORT
+CMD npm run dev -- --host 0.0.0.0 --port $VITE_FRONTEND_PORT
