--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -4,4 +4,4 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 WORKDIR /app/src
 RUN if [ ! -d uploads ] ; then mkdir ./uploads ; fi
-CMD flask --app api.py run --host 0.0.0.0 --port $BACKEND_PORT
+CMD flask --app api.py --debug run --host 0.0.0.0 --port $BACKEND_PORT
